added original jimple 1.4 and 1.5

--- a/build.properties
+++ b/build.properties
@@ -10,6 +10,9 @@ java8.dir=${jj.root}/java8
 test.dir=${jj.root}/test
 preprocessor.dir=${jj.root}/java8/preprocessor
 
+Jimple1.4Backend.dir=${jj.root}/Jimple1.4-Backend
+Jimple1.5Backend.dir=${jj.root}/Jimple1.5-Backend
+
 ast.package=org.extendj.ast
 
 # Miscellaneous directories
