--- a/Jimple-Main/build.xml
+++ b/Jimple-Main/build.xml
@@ -17,7 +17,7 @@
 <!-- Jastadd task. -->
 <taskdef name="jastadd" classname="org.jastadd.JastAddTask" classpath="${tools.dir}/jastadd2.jar"/>
 
-<target name="jimple-frontend-gen">
+<target name="jimple-gen">
 	<!-- Generate AST node types and weave aspect modules. -->
 	<!-- Don't include backend stuff here. -->
 	<mkdir dir="${gen.dir}"/>
@@ -40,10 +40,18 @@
 			<exclude name="BytecodeDescriptor.jrag"/>
 			<exclude name="BytecodeReader.jrag"/>
 		</fileset>
+		<fileset dir="${java4.dir}/backend">
+			<include name="*.jrag"/>
+			<include name="*.jadd"/>
+		</fileset>
 		<fileset dir="${java5.dir}/grammar">
 			<include name="*.ast"/>
 		</fileset>
 		<fileset dir="${java5.dir}/frontend">
+			<include name="*.jrag"/>
+			<include name="*.jadd"/>
+		</fileset>
+		<fileset dir="${java5.dir}/backend">
 			<include name="*.jrag"/>
 			<include name="*.jadd"/>
 		</fileset>
